syntax = "proto3";

import "google/protobuf/any.proto";

option go_package = "tss/";

package tss;

// The TSS service definition.
service TssService {
  rpc SignMessage (SignRequest) returns (ServiceReply) {}
  rpc RegisterDKG (DKGRequest) returns (ServiceReply) {}
  rpc Reshare (ReshareRequest) returns (ServiceReply) {}
}

message DKGRequest {
}

message SignRequest {
  string hash = 1;
  string pubkey = 2;
  string message = 3;
}

message ReshareRequest {
  string hash = 1;
  string pubkey = 2;
}

message CheckSignatureByPubkeyRequest {
  string message = 1;
  string pubkey = 2;
}

message ServiceReply {
  repeated google.protobuf.Any data = 2;
}
